[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winter"
version = "0.1.0"
description = "Snowflake Terminal Client with Table Scrolling and Prefix Support"
authors = [{name = "Winter Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "snowflake-connector-python>=3.0.0",
    "cryptography>=3.4.8",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "inquirer>=3.0.0",
    "openpyxl>=3.0.0",
    "pyperclip>=1.8.0",
    "packaging>=21.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
winter = "winter.main:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]